--- a/_config.yml
+++ b/_config.yml
@@ -1,39 +1,13 @@
 # Site settings
-title: Site Long Title
-short_title: Site Title
+title: Nathaniel Deines
+short_title: Nathaniel Deines
 description: |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eleifend metus eget justo tincidunt, nec consequat turpis pretium. Etiam varius tellus tortor, in mattis ex convallis vel.
+    This is the personal website for Nathaniel Deines.
 baseurl: ""
 url: "http://opendatahandbook.org" # the base hostname & protocol for your site
-github_username:  okfn
-github_repo:  opendatahandbook
-paypal: admin@okfn.org
-contact: https://discuss.okfn.org/c/network-and-community/open-data-handbook
-
-devs:
-  -
-      name: Sam Smith
-      github: mintcanary
-
-contributors:
-  -
-      name: Rufus Pollock
-      link: http://rufuspollock.org/
-
-supporters:
-  -
-    name: Shuttleworth Foundation
-    logo: shuttleworth.png
-    footer_logo: shuttleworth-footer.png
-    url: https://www.shuttleworthfoundation.org/
-  -
-    name: The World Bank
-    logo: worldbank.png
-    footer_logo: worldbank-footer.png
-    url: http://www.worldbank.org/
-
-
-#googleanalytics: UA-XXXXX-X
+github_username:  ndeines
+github_repo:  ndeines
+contact: mailto:nathaniel.deines@gmail.com
 
 markdown: kramdown
 
@@ -52,27 +26,3 @@ defaults:
     values:
       layout: post
       section: posts
-
-
-related_projects:
-  -
-      name: OpenGovernmentData.org
-      link: http://opengovernmentdata.org/
-  -
-      name: The DataHub
-      link: http://datahub.io/
-  -
-      name: DataCatalogs.org
-      link: http://datacatalogs.org/
-  -
-      name: OpenSpending.org
-      link: http://openspending.org/
-  -
-      name: SchoolOfData.org
-      link: http://schoolofdata.org/
-  -
-      name: OpenDefinition.org
-      link: http://opendefinition.org/
-  -
-      name: Introducing Open Data
-      link: http://okfn.org/opendata/
